--- a/SolvitaireGUI/App.xaml
+++ b/SolvitaireGUI/App.xaml
@@ -1,9 +1,13 @@
 ﻿<Application x:Class="SolvitaireGUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:System="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:SolvitaireGUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <System:Double x:Key="CardHeight">120</System:Double>
+        <System:Double x:Key="CardWidth">80</System:Double>
+
+
     </Application.Resources>
 </Application>
