--- a/SolvitaireGUI/Views/GameStateView.xaml
+++ b/SolvitaireGUI/Views/GameStateView.xaml
@@ -10,12 +10,14 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
+        <local:TopCardConverter x:Key="TopCardConverter" />
+        <local:TakeLastConverter x:Key="TakeLastConverter" />
         <local:CardToImagePathConverter x:Key="CardToImageConverter" />
         <local:FanOffsetConverter x:Key="FanOffsetConverter"/>
         <DataTemplate x:Key="CardTemplate">
             <Grid>
                 <Image Width="{StaticResource CardWidth}" Height="{StaticResource CardHeight}"
-                       Source="{Binding Converter={StaticResource CardToImageConverter}}" />
+                       Source="{Binding  Converter={StaticResource CardToImageConverter}}" />
             </Grid>
         </DataTemplate>
         <ItemsPanelTemplate x:Key="FannedPanel">
@@ -53,13 +55,30 @@
             </Grid>
         </ContentControl>
 
-        <ItemsControl Grid.Column="2" Grid.Row="2" ItemsSource="{Binding WastePile.Cards}"
-                      ItemTemplate="{StaticResource CardTemplate}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Vertical" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
+        <!-- Waste Pile -->
+        <ItemsControl Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
+                     ItemsSource="{Binding WastePile.Cards,  
+                           Converter={StaticResource TakeLastConverter}, ConverterParameter=3}"  
+                     ItemTemplate="{StaticResource CardTemplate}"
+                     AlternationCount="10">  
+           <ItemsControl.ItemsPanel>  
+               <ItemsPanelTemplate>  
+                   <StackPanel Orientation="Horizontal" />  
+               </ItemsPanelTemplate>  
+           </ItemsControl.ItemsPanel>  
+           <ItemsControl.ItemContainerStyle>
+                <Style TargetType="ContentPresenter">
+                    <Setter Property="Margin" Value="0,0,0,0"/>
+                    <Style.Triggers>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+                            <Setter Property="Margin" Value="-60,0,0,0"/>
+                        </Trigger>
+                        <Trigger Property="ItemsControl.AlternationIndex" Value="2">
+                            <Setter Property="Margin" Value="-60,0,0,0"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ItemsControl.ItemContainerStyle>  
         </ItemsControl>
 
         <!-- DataTemplate for FoundationPiles -->
@@ -67,16 +86,18 @@
                       ItemsSource="{Binding FoundationPiles}">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <ItemsControl ItemsSource="{Binding Cards}" 
-                                  ItemTemplate="{StaticResource CardTemplate}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Vertical" />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                    </ItemsControl>
+                    <Border BorderBrush="LightSlateGray" BorderThickness="2" 
+                            CornerRadius="20" Margin="2 0">
+                        <ContentControl Content="{Binding Cards, Converter={StaticResource TopCardConverter}}"
+                                        ContentTemplate="{StaticResource CardTemplate}" />
+                    </Border>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid Rows="1" Columns="4" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
         </ItemsControl>
 
         <!-- DataTemplate for TableauPiles -->
@@ -90,10 +111,19 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <ItemsControl ItemsSource="{Binding Cards}"
-                                  ItemTemplate="{StaticResource CardTemplate}"
                                   ItemsPanel="{StaticResource FannedPanel}"
                                   ItemContainerStyle="{StaticResource FannedItemStyle}"
-                                  AlternationCount="1000" />
+                                  AlternationCount="1000" >
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Image Width="{StaticResource CardWidth}" Height="{StaticResource CardHeight}"
+                                       Source="{Binding IsFaceUp,  
+                                    Converter={StaticResource CardToImageConverter},
+                                    ConverterParameter={Binding }}" />
+
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
             <ItemsControl.Margin>
