GUI works as intended

--- a/SolvitaireGUI/Views/AgentPlayingView.xaml
+++ b/SolvitaireGUI/Views/AgentPlayingView.xaml
@@ -30,6 +30,8 @@
                        Command="{Binding MakeSpecificMoveCommand}"  
                        CommandParameter="{Binding SelectedItem, ElementName=LegalMovesListView}"/>
 
+                <Button Content="Start Agent" Command="{Binding StartAgentCommand}"></Button>
+
             </StackPanel>
         </Grid>
 
