--- a/SolvitaireGUI/Views/AgentPlayingView.xaml
+++ b/SolvitaireGUI/Views/AgentPlayingView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:SolvitaireGUI"
              xmlns:solvitaireGuiFunctions="clr-namespace:SolvitaireGuiFunctions;assembly=SolvitaireGuiFunctions"
              mc:Ignorable="d" 
-             d:DataContext="{x:Static solvitaireGuiFunctions:AgentPlayingModel.Instance}"
+             d:DataContext="{x:Static local:AgentPlayingModel.Instance}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -15,7 +15,7 @@
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0">
-            <StackPanel HorizontalAlignment="Left">
+            <StackPanel HorizontalAlignment="Left" Width="400">
                 <Button Content="Make Move" 
                         Command="{Binding MakeMoveCommand}" />
                 <Button Content="Reset Game" 
