--- a/SolvitaireGUI/Views/GameStateView.xaml
+++ b/SolvitaireGUI/Views/GameStateView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:SolvitaireGUI"
              xmlns:solvitaireGuiFunctions="clr-namespace:SolvitaireGuiFunctions;assembly=SolvitaireGuiFunctions"
              mc:Ignorable="d" 
-             d:DataContext="{x:Static solvitaireGuiFunctions:GameStateModel.Instance}"
+             d:DataContext="{x:Static local:GameStateModel.Instance}"
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
