--- a/SolvitaireGUI/Views/GameStateView.xaml
+++ b/SolvitaireGUI/Views/GameStateView.xaml
@@ -63,7 +63,7 @@
                         <Style TargetType="Image">
                             <Setter Property="Source" Value="/Resources/Cards/back.png" />
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding Cards.Count}" Value="0">
+                                <DataTrigger Binding="{Binding Count}" Value="0">
                                     <Setter Property="Source" Value="{x:Null}" />
                                 </DataTrigger>
                             </Style.Triggers>
@@ -75,7 +75,7 @@
 
         <!-- Waste Pile -->
         <ItemsControl Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
-                     ItemsSource="{Binding WastePile.Cards,  
+                     ItemsSource="{Binding WastePile,  
                            Converter={StaticResource TakeLastConverter}, ConverterParameter=3}"  
                      ItemTemplate="{StaticResource CardTemplate}"
                      AlternationCount="10">  
@@ -105,13 +105,8 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <!--<TextBlock Text="{Binding Cards.Count}" />-->
-                        <!--<ItemsControl ItemsSource="{Binding Cards, Converter={StaticResource TopCardConverter}}"
-                                      ItemTemplate="{StaticResource CardTemplate}"
-                                   />-->
-        
-                        <ContentControl Content="{Binding TopCard}" ContentTemplate="{StaticResource CardTemplate}" />
-   
+                        <ContentControl Content="{Binding TopCard}" 
+                                        ContentTemplate="{StaticResource CardTemplate}" />
                     </StackPanel>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
@@ -132,7 +127,7 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <ItemsControl ItemsSource="{Binding Cards}"
+                    <ItemsControl ItemsSource="{Binding }"
                                   ItemTemplate="{StaticResource CardTemplate}"
                                   ItemsPanel="{StaticResource FannedPanel}"
                                   ItemContainerStyle="{StaticResource FannedItemStyle}"
