--- a/SolvitaireGUI/Views/AgentPlayingView.xaml
+++ b/SolvitaireGUI/Views/AgentPlayingView.xaml
@@ -16,7 +16,7 @@
 
         <Grid Grid.Column="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
@@ -57,22 +57,27 @@
                         Command="{Binding StopAgentCommand}" />
             </Grid>
 
-            <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" 
-                        HorizontalAlignment="Left" >
-                
-                <Button Content="Reset Game" 
-                        Command="{Binding ResetGameCommand}" />
-                <Button Content="New Game" 
-                        Command="{Binding NewGameCommand}" />
+            <DockPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" 
+                        HorizontalAlignment="Stretch" >
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Top">
+                    <Button Content="Reset Game" Width="80" Height="30" Margin="10 0"
+                            Style="{StaticResource RoundedButtonStyle}"
+                            Command="{Binding ResetGameCommand}" />
+                    <Button Content="New Game" Width="80" Height="30" Margin="10 0"
+                            Style="{StaticResource RoundedButtonStyle}"
+                            Command="{Binding NewGameCommand}" />
+                </StackPanel>
 
-                <ListView x:Name="LegalMovesListView" VerticalAlignment="Stretch"  
+                <Button Content="Make Specific Move"  DockPanel.Dock="Top" Height="30" VerticalAlignment="Top"
+                        Command="{Binding MakeSpecificMoveCommand}"  
+                        CommandParameter="{Binding SelectedItem, ElementName=LegalMovesListView}"/>
+
+                <ListView x:Name="LegalMovesListView" DockPanel.Dock="Bottom" 
                          ItemsSource="{Binding LegalMoves}"  
                          SelectedItem="{Binding SelectedMove, Mode=TwoWay}"/>  
-                <Button Content="Make Specific Move"  
-                       Command="{Binding MakeSpecificMoveCommand}"  
-                       CommandParameter="{Binding SelectedItem, ElementName=LegalMovesListView}"/>
 
-            </StackPanel>
+
+            </DockPanel>
         </Grid>
 
         <ContentControl Grid.Column="1">
