--- a/SolvitaireGUI/Views/GameStateView.xaml
+++ b/SolvitaireGUI/Views/GameStateView.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:SolvitaireGUI"
              mc:Ignorable="d" 
              d:DataContext="{x:Static local:GameStateModel.Instance}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             MinWidth="640">
 
     <UserControl.Resources>
         <local:TopCardConverter x:Key="TopCardConverter" />
