--- a/SolvitaireGUI/Views/GameStateView.xaml
+++ b/SolvitaireGUI/Views/GameStateView.xaml
@@ -8,7 +8,12 @@
              d:DataContext="{x:Static local:GameStateModel.Instance}"
              d:DesignHeight="450" d:DesignWidth="800"
              MinWidth="640">
-
+    <UserControl.ContextMenu>
+        <ContextMenu>
+            <MenuItem Header="Copy GameState as JSON"
+                      Command="{Binding CopyGameStateAsJsonCommand}" />
+        </ContextMenu>
+    </UserControl.ContextMenu>
     <UserControl.Resources>
         <local:TopCardConverter x:Key="TopCardConverter" />
         <local:TakeLastConverter x:Key="TakeLastConverter" />
