--- a/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
+++ b/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
@@ -106,7 +106,8 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <ContentControl Grid.Row="1" Content="{Binding FitnessByGeneration}"/>
+            <ContentControl Grid.Row="0" Content="{Binding FitnessByGeneration}"/>
+            <ContentControl Grid.Row="1" Content="{Binding AverageStatByGeneration}"/>
         </Grid>
         
 
