--- a/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
+++ b/SolvitaireGUI/Views/GeneticAlgorithmTabView.xaml
@@ -4,101 +4,112 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SolvitaireGUI"
+             xmlns:solvitaireGenetics="clr-namespace:SolvitaireGenetics;assembly=SolvitaireGenetics"
              d:DataContext="{x:Static local:GeneticAlgorithmTabModel.Instance}"
              mc:Ignorable="d" 
              Name="GeneticsTab"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid AllowDrop="True"
           Drop="ParametersExpander_OnDrop"
-          DragOver="ParametersExpander_DragOver">
+          DragOver="ParametersExpander_DragOver"
+          Background="{StaticResource BackgroundColor}"
+          >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <!-- Algorithm Type Selection -->
+        
+        <Expander Header="Parameters" ExpandDirection="Left" >
+            <DockPanel>
 
-        <Grid DataContext="{Binding Parameters}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200" />
-                <!-- Label column -->
-                <ColumnDefinition Width="*" />
-                <!-- Input column -->
-            </Grid.ColumnDefinitions>
+                <GroupBox Header="Algorithm Parameters" DockPanel.Dock="Top" BorderBrush="{StaticResource BorderColor}">
+                    <StackPanel>
+                        <StackPanel Orientation="Horizontal" Margin="10" DockPanel.Dock="Top" >
+                            <TextBlock Text="Algorithm Type:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                            <ComboBox ItemsSource="{Binding AlgorithmTypes}" 
+                                      SelectedItem="{Binding SelectedAlgorithmType}" 
+                                      Width="150"/>
+                        </StackPanel>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-                <!-- Spacer -->
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <!-- Buttons -->
-            </Grid.RowDefinitions>
+                        <Grid DataContext="{Binding Parameters}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="200" />
+                                <!-- Label column -->
+                                <ColumnDefinition Width="*" />
+                                <!-- Input column -->
+                            </Grid.ColumnDefinitions>
 
-            <!-- Output Directory -->
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Output Directory:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Right"  TextAlignment="Right"
-                         Text="{Binding OutputDirectory}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" MinWidth="240"/>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
 
-            <!-- Decks to Use -->
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Decks to Use:" VerticalAlignment="Center" Margin="5"/>
-            <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Right"  TextAlignment="Right"
-                         Text="{Binding DecksToUse}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" MinWidth="240" />
+                            <!-- Output Directory -->
+                            <TextBlock Grid.Row="0" Grid.Column="0" Text="Output Directory:" VerticalAlignment="Center" Margin="5" />
+                            <TextBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right"  
+                                     TextAlignment="Right"
+                                     Text="{Binding OutputDirectory}" Margin="5"
+                                     Style="{StaticResource TextBoxStyle}" MinWidth="240"/>
 
-            <!-- Population Size -->
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="Population Size:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding PopulationSize}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" />
+                            <!-- Population Size -->
+                            <TextBlock Grid.Row="2" Grid.Column="0" Text="Population Size:" VerticalAlignment="Center" Margin="5" />
+                            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding PopulationSize}" Margin="5"
+                                     Style="{StaticResource TextBoxStyle}" />
 
-            <!-- Generations -->
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Generations:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Generations}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" />
+                            <!-- Generations -->
+                            <TextBlock Grid.Row="3" Grid.Column="0" Text="Generations:" VerticalAlignment="Center" Margin="5" />
+                            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Generations}" Margin="5"
+                                     Style="{StaticResource TextBoxStyle}" />
 
-            <!-- Mutation Rate -->
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="Mutation Rate:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding MutationRate}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" />
+                            <!-- Mutation Rate -->
+                            <TextBlock Grid.Row="4" Grid.Column="0" Text="Mutation Rate:" VerticalAlignment="Center" Margin="5" />
+                            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding MutationRate}" Margin="5"
+                                     Style="{StaticResource TextBoxStyle}" />
 
-            <!-- Tournament Size -->
-            <TextBlock Grid.Row="5" Grid.Column="0" Text="Tournament Size:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding TournamentSize}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" />
+                            <!-- Tournament Size -->
+                            <TextBlock Grid.Row="5" Grid.Column="0" Text="Tournament Size:" VerticalAlignment="Center" Margin="5" />
+                            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding TournamentSize}" Margin="5"
+                                     Style="{StaticResource TextBoxStyle}" />
+                        </Grid>
 
-            <!-- Max Moves Per Generation -->
-            <TextBlock Grid.Row="6" Grid.Column="0" Text="Max Moves Per Generation:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="6" Grid.Column="1" Text="{Binding MaxMovesPerGeneration}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" />
+                    </StackPanel>
 
-            <!-- Max Games Per Generation -->
-            <TextBlock Grid.Row="7" Grid.Column="0" Text="Max Games Per Generation:" VerticalAlignment="Center" Margin="5" />
-            <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding MaxGamesPerGeneration}" Margin="5"
-                         Style="{StaticResource TextBoxStyle}" />
+                    
 
-            <!-- Buttons -->
-            <Button Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" Content="Run Algorithm" Style="{StaticResource RoundedButtonStyle}"
-                        Background="{StaticResource GreenAccentColor}" Width="120"
-                        IsEnabled="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataContext.IsAlgorithmRunning, Converter={StaticResource InverseBooleanConverter}}"
-                        Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Path=DataContext.RunAlgorithmCommand}" 
+                </GroupBox>
+
+                <GroupBox Header="Specific Parameters" DockPanel.Dock="Top" BorderBrush="{StaticResource BorderColor}">
+                    <!-- Dynamically load the relevant control -->
+                    <ContentControl Content="{Binding Parameters}">
+                        <ContentControl.Resources>
+                            <DataTemplate DataType="{x:Type solvitaireGenetics:SolitaireGeneticAlgorithmParameters}">
+                                <local:SolitaireGeneticParametersControl />
+                            </DataTemplate>
+                            <DataTemplate DataType="{x:Type solvitaireGenetics:QuadraticGeneticAlgorithmParameters}">
+                                <local:QuadraticGeneticParametersControl />
+                            </DataTemplate>
+                        </ContentControl.Resources>
+                    </ContentControl>
+                </GroupBox>
+
+                <!-- Run Button -->
+                <Button DockPanel.Dock="Bottom" Content="Run Algorithm" Style="{StaticResource RoundedButtonStyle}"
+                        Background="{StaticResource GreenAccentColor}" Width="120" MaxHeight="50"
+                        IsEnabled="{Binding IsAlgorithmRunning, Converter={StaticResource InverseBooleanConverter}}"
+                        Command="{Binding RunAlgorithmCommand }" 
                         Margin="5" />
-
-            <StackPanel Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                <Button Content="Save Params" Command="{Binding SaveParametersCommand}" 
-                            Style="{StaticResource RoundedButtonStyle}" Margin="5" />
-                <Button Content="Load Params" Command="{Binding LoadParametersCommand}"
-                            Style="{StaticResource RoundedButtonStyle}" Margin="5" />
-            </StackPanel>
-        </Grid>
+            </DockPanel>
+        </Expander>
+        
 
         <TabControl Grid.Column="1" Grid.ColumnSpan="2">
 
@@ -113,7 +124,6 @@
                     <ContentControl Grid.Row="1" Content="{Binding AverageStatByGeneration}"/>
                 </Grid>
             </TabItem>
-
         </TabControl>
         
 
